# pvr.octonet

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
debian/: control  copyright  rules
pvr.octonet/: addon.xml  addon.xml.in  changelog.txt
pvr.octonet/resources/: settings.xml
pvr.octonet/resources/language/resource.language.af_za/: strings.po
pvr.octonet/resources/language/resource.language.am_et/: strings.po
pvr.octonet/resources/language/resource.language.ar_sa/: strings.po
pvr.octonet/resources/language/resource.language.ast_es/: strings.po
pvr.octonet/resources/language/resource.language.az_az/: strings.po
pvr.octonet/resources/language/resource.language.be_by/: strings.po
pvr.octonet/resources/language/resource.language.bg_bg/: strings.po
pvr.octonet/resources/language/resource.language.bs_ba/: strings.po
pvr.octonet/resources/language/resource.language.ca_es/: strings.po
pvr.octonet/resources/language/resource.language.cs_cz/: strings.po
pvr.octonet/resources/language/resource.language.cy_gb/: strings.po
pvr.octonet/resources/language/resource.language.da_dk/: strings.po
pvr.octonet/resources/language/resource.language.el_gr/: strings.po
pvr.octonet/resources/language/resource.language.en_au/: strings.po
pvr.octonet/resources/language/resource.language.en_gb/: strings.po
pvr.octonet/resources/language/resource.language.en_nz/: strings.po
pvr.octonet/resources/language/resource.language.en_us/: strings.po
pvr.octonet/resources/language/resource.language.eo/: strings.po
pvr.octonet/resources/language/resource.language.es_ar/: strings.po
pvr.octonet/resources/language/resource.language.es_es/: strings.po
pvr.octonet/resources/language/resource.language.es_mx/: strings.po
pvr.octonet/resources/language/resource.language.et_ee/: strings.po
src/: OctonetData.cpp  OctonetData.h  Socket.cpp  Socket.h  addon.cpp  addon.h  client.cpp  client.h  rtsp_client.cpp  rtsp_client.hpp
(+52 files in other folders)
